--- a/style.css
+++ b/style.css
@@ -54,3 +54,41 @@ a h3 {
     color: black;
     font-family: 'Bebas Neue', sans-serif;
 }
+
+/* RUTA.2 */
+
+form {
+    background-color: rgb(0, 0, 0);
+}
+label {
+    color: rgb(161, 233, 255);
+    background-color: rgb(0, 0, 0);
+    font-size: 20px;
+    border-radius: 20%;
+    font-family: 'Bruno Ace SC', cursive;
+}
+
+h5 {
+    font-size: 40px;
+    color: rgb(86, 166, 237);
+    font-family: 'Bruno Ace SC', cursive;
+}
+
+legend {
+    color: rgb(244, 249, 255);
+    font-size: 30px;
+}
+
+input {
+    font-size: 20px;
+}
+
+p {
+    color: aliceblue;
+    font-size: 20px;
+}
+
+textarea {
+    width: 60%;
+    height: 70%;
+}
