--- a/style.css
+++ b/style.css
@@ -41,14 +41,21 @@ a h3 {
   color: rgb(188, 172, 0);
   font-family: 'Bebas Neue', sans-serif;
   text-align: center;
+  transition: 0,5s;
 }
 
 .caja {
   /* Estilos de las cajas */
-  width: 500px;
-  height: 500px;
   margin:auto; /* Espacio entre las cajas */
   overflow: hidden;
+}
+
+.caja:hover{
+  color: rgb(188, 172, 0);
+  font-family: 'Bebas Neue', sans-serif;
+  text-align: center;
+  font-size: 50px;
+  transition: 0,5s;
 }
 
 .caja img {
@@ -65,6 +72,17 @@ a h3 {
   border-color: #ccab3d;
   border-style: solid;
   border-top: saddlebrown;
+  transition: 0.5s;
+}
+
+.caja #caja1:hover {
+  width: 600px;
+  padding: 40px;
+  border-radius: 20%;
+  border-color: #ccab3d;
+  border-style: solid;
+  border-top: saddlebrown;
+  transition: 0.5s;
 }
 
 .caja .caja2img {
@@ -75,7 +93,20 @@ a h3 {
   border-color: #ccab3d;
   border-style: solid;
   border-top: saddlebrown;
+  transition: 0.5s;
 }
+
+.caja #caja2:hover {
+  width: 600px;
+  height: 600px;
+  padding: 40px;
+  border-radius: 20%;
+  border-color: #ccab3d;
+  border-style: solid;
+  border-top: saddlebrown;
+  transition: 0.5s;
+}
+
   nav a {
     font-family: 'Gruppo', cursive;
   }
